# C2Revenant

./: .gitignore  README.md
beacon-rs/: Cargo.toml
beacon-rs/src/: beacon.rs  config.rs  executor.rs  main.rs
scripts/: build.sh  restart.sh
server/: app.py  config.py  requirements.txt
server/core/: operator.py
server/db/: __init__.py  models.py
server/routes/: __init__.py  beacon.py
shared/: README.md  protocol.md
