[package]
name = "beacon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "beacon"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

[profile.release]
opt-level = 3
strip = true